--- a/src/views/pages/contact.pug
+++ b/src/views/pages/contact.pug
@@ -16,4 +16,22 @@ block content
 
   //- Desktop page
   section.page
-    h1.page__title--bold # Contact page
+    nav#nav.nav
+      button.menu
+        em.hamburger
+      .brand
+        a(href='#') Brand
+      ul.navbar
+        li
+          a(href='#Home') Home
+        li
+          a(href='#About') About
+        li
+          a(href='#Services') Services
+        li
+          a(href='#Contact') Contact
+    section.section
+      h1.page__title--padding-top-100 # Contact page
+    section.section
+    .pattern-overlay
+
