--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,268 +4,133 @@
 // Vendors
 @import './vendors/bootstrap/bootstrap';
 
+$transparent: transparent;
+
 // Bem example
 .page {
+  font-size: small;
+
+  &__header {
+    text-align: right;
+    padding-right: 30px;
+    padding-top: 16px;
+    font-size: 13px;
+    align-items: center;
+
+    &--pg {
+      padding: 0px 27px 0px 0px;
+      color: $black;
+    }
+
+    &--icon {
+      width: 22px;
+    }
+    &--account {
+      background-color: #4285f4;
+      color: $white;
+    }
+  }
+
+  &__search {
+    text-align: center;
+
+    &--image {
+      width: 330px;
+      padding-top: 70px;
+    }
+
+    &--form {
+      text-align: center;
+    }
+
+    &--bar {
+      background-color: $transparent;
+      height: 44px;
+      width: 582px;
+      border-radius: 24px;
+      border: 1px solid #dfe1e5;
+    }
+
+    &--type {
+      background-color: $transparent;
+      height: 34px;
+      width: 582px;
+      border: none;
+      color: $black;
+      padding-left: 20px;
+      margin-top: 4px;
+      line-height: 34px;
+    }
+  }
+
+  &__button {
+    padding-top: 16px;
+
+    &--search {
+      color: #5F6368;
+      padding-right: 16px;
+      padding-left: 16px;
+      margin-top: 11px;
+      margin-right: 4px;
+      margin-bottom: 13px;
+      margin-left: 4px;
+      border-radius: 4px;
+      background-color: #f8f8f8;
+      border: none;
+      height: 36px;
+    }
+  }
+
+  &__language {
+    text-align: center;
+    padding-bottom: 60px;
+
+    &--l {
+      padding-left: 12px;
+      color: $blue;
+    }
+  }
+
+  &__footer {
+    background-color: #f8f8f8;
+    border-top: 1px solid #e4e4e4;
+    height:40px;
+
+    &--top {
+      padding-left: 20px;
+      color: #5F6368;
+      height: 40px;
+
+    }
+
+    &--left {
+      color: #5F6368;
+      padding-left: 20px;
+    }
+
+    &--right {
+      position: absolute;
+      right: 0;
+    }
+    &--r {
+      color: #5F6368;
+      padding-right: 20px;
+    }
+  }
+
 
   &__title {
     text-align: center;
 
-    &--color-red {
-      color: $red;
+    &--color-blue {
+      color: $blue;
     }
 
-    &--padding-top-100 {
-      padding-top: 100px;
-    }
-  }
-}
-
-$break-width: 600px;
-html, body{
-  height: 100%;
-  min-height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.section{
-  position: relative;
-
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin: 0;
-  padding: 0;
-  height: 900px;
-  width: 100%;
-}
-
-.nav{
-  transition: all .5s ease;
-  font-size: 12px;
-  font-family: 'Open Sans', sans-serif;
-  width: 100%;
-  z-index: 100;
-  position: absolute;
-  /* bottom: 0; */
-  left: 0;
-  letter-spacing: 2px;
-  line-height: 100px;
-  -webkit-transition-property: background-color, box-shadow, line-height, height;
-  transition-property: background-color, box-shadow, line-height, height;
-  -webkit-transition-timing-function: cubic-bezier(.78,.13,.15,.86);
-  transition-timing-function: cubic-bezier(.78,.13,.15,.86);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  .brand{
-    /* padding: 15px 60px; */
-    /* line-height: 30px; */
-    line-height: 100px;
-    padding-left: 60px;
-    padding-right: 60px;
-    display: inline-block;
-    float: left;
-    font-size: 20px;
-    font-family: 'Pacifico', cursive;
-    -webkit-transition-property: background-color, box-shadow, line-height, height;
-    transition-property: background-color, box-shadow, line-height, height;
-    -webkit-transition-timing-function: cubic-bezier(.78,.13,.15,.86);
-    transition-timing-function: cubic-bezier(.78,.13,.15,.86);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    a{
-      color: #E33B00;
-      text-decoration: none;
-    }
-
-    /* padding-right: 60px; */
-  }
-  ul {
-    margin: 0;
-    text-transform: uppercase;
-    li{
-      text-align: center;
-      display: inline-block;
-      list-style: none;
-      padding: 15px 15px;
-      cursor: pointer;
-      line-height: 30px;
-      &:hover a{
-        font-weight: bold;
-      }
-      a{
-        color: #eee;
-        text-decoration: none;
-      }
+    &--bold {
+      font-weight: bold;
     }
   }
 }
 
-.sticky {
-  position: fixed !important;
-  top: 0;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  /* box-shadow: 0 4px 5px -2px rgba(0,0,0,0.22), 0 2px 1px -1px rgba(0,0,0,0.05); */
-  background-color: #fff;
-  line-height: 30px;
-  .brand{
-    line-height: 60px;
-  }
-  ul li a{
-    color: #6E7982;
-  }
-  ul li:hover a{
-    color: #E33B00;
-  }
-}
-
-.pattern-overlay {
-  background: rgba(0,0,0,0.3) url("http://codemydesign.ru/CMDSpace/image/css/images/overlay.png") repeat;
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 0;
-}
-.menu{
-  display: none;
-}
 
 
-@media (max-width: $break-width){
-  .sticky .menu{
-    top: 0;
-    .hamburger{
-      background: #6E7982;
-      &::before, &::after{
-        background: #6E7982;
-      }
-    }
-  }
-
-  .open.sticky .hamburger{
-    background: transparent;
-  }
-  .open .hamburger{
-    background-color: transparent;
-    &::before{
-      -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      transform: rotate(45deg);
-    }
-    &::after{
-      -webkit-transform: rotate(-45deg) translate(2px, -2px);
-      -ms-transform: rotate(-45deg) translate(2px, -2px);
-      transform: rotate(-45deg) translate(2px, -2px);
-    }
-  }
-  .menu{
-    display: block;
-    outline:none;
-    position:relative;
-    line-height: 60px;
-    float:left;
-    left:20px;
-    top:20px;
-    width:60px;
-    height:60px;
-    background:none;
-    border:0;
-    padding:0;
-    margin:0;
-    cursor:pointer;
-    opacity: 0.7;
-    -webkit-transition: opacity 150ms;
-    transition: opacity 150ms;
-    &:hover{
-      opacity: 1;
-    }
-  }
-
-  .hamburger, .hamburger::after, .hamburger::before{
-    margin: 0 auto;
-    display: block;
-    width: 24px;
-    height: 3px;
-    line-height: 0;
-    -webkit-transition: all 150ms;
-    transition: all 150ms;
-  }
-  .hamburger::before{
-    content: '';
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-    background:#fff;
-  }
-  .hamburger::after{
-    content:'';
-    -webkit-transform: rotate(-45deg) translate(2px, -2px);
-    -ms-transform: rotate(-45deg) translate(2px, -2px);
-    transform: rotate(-45deg) translate(2px, -2px);
-    background:#fff;
-  }
-  .hamburger{
-    background:#fff;
-    &::after{
-      -webkit-transform:translateY(5px);
-      -ms-transform:translateY(5px);
-      transform:translateY(5px);
-    }
-    &::before{
-      -webkit-transform:translateY(-8px);
-      -ms-transform:translateY(-8px);
-      transform:translateY(-8px);
-    }
-  }
-  /*.collapse nav{
-    -webkit-transform:translateY(-100%);
-    -ms-transform:translateY(-100%);
-    transform:translateY(-100%);
-  }*/
-  .navbar{
-    -webkit-transition: -webkit-transform 150ms;
-    transition: transform 150ms;
-  }
-  ul.navbar{
-    -webkit-transform: translate(-100%, 0);
-    -ms-transform: translate(-100%, 0);
-    transform: translate(-100%, 0);
-    /* transform: translateY(-200%); */
-    li{
-      /*line-height: calc((100vh - 60px) / 6);*/
-      display: block;
-    }
-    padding-left: 0;
-  }
-  .open .navbar{
-    -webkit-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    transform: translate(0, 0);
-
-  }
-
-  .nav .brand{
-    display: block;
-    text-align: center;
-    float: none;
-  }
-  .sticky .brand{
-    background-color: white;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  }
-  #nav{
-    height: 100px;
-    &.open{
-      height: auto;
-      min-height: 100%;
-    }
-    &.sticky{
-      height: 60px;
-    }
-    .open.sticky{
-      height: auto;
-    }
-  }
-
-}
