responsive sticky navigation bar and parallax effect

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,8 @@
 // Vendors
 @import './vendors/bootstrap/bootstrap';
 
+@import './combine.scss';
+
 $transparent: transparent;
 
 // Bem example
@@ -131,6 +133,5 @@ $transparent: transparent;
     }
   }
 }
-
 
 
