--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,8 @@
 // Vendors
 @import './vendors/bootstrap/bootstrap';
 
-@import './combine.scss';
+//@import './combine.scss';
+@import './accordion.scss';
 
 $transparent: transparent;
 
