--- a/src/scss/accordion.scss
+++ b/src/scss/accordion.scss
@@ -16,7 +16,7 @@ html {
   width: 100%;
   height: 100%;
   font-family: Arial, sans-serif;
-  background: $bgBody;
+  //background: $bgBody;
 }
 
 .wrapper {
@@ -28,9 +28,9 @@ html {
 }
 
 .accordion {
-  max-width: 768px;
+  max-width: 100%;
   width: 100%;
-  border-radius: 10px;
+  border-radius: 5px;
   overflow: hidden;
   &__link {
     cursor: pointer;
