--- a/src/scss/combine-bs.scss
+++ b/src/scss/combine-bs.scss
@@ -9,6 +9,14 @@ body {
   max-width: 100%;
 }
 
+.jumbotron {
+  width: 100%;
+  color: #b0bec5;
+  margin-bottom: 0 !important;
+  padding-bottom: 34px !important;
+  padding-top: 56px !important;
+}
+
 .navbar-scroll {
   background-color: rgba(0,123,255,0.4);
   transition: background-color 0.5s;
@@ -57,7 +65,7 @@ section.module.content:last-child {
   margin-bottom: 60px;
 }
 section.module.parallax {
-  padding: 240px 0;
+  padding: 0px 0;
   background-position: 0 0;
 }
 section.module.parallax h1 {
@@ -70,8 +78,8 @@ section.module.parallax h1 {
   text-shadow: 0 0 10px $white;
 }
 section.module.parallax-1 {
-  background-image: url("https://i.ytimg.com/vi/SwOaV-pzGcA/maxresdefault.jpg");
-  background-position: 50% 0;
+  background-image: url("/assets/images/others/rain.jpeg");
+  background-position: 100% 0;
   background-repeat: repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -114,9 +122,10 @@ ul {
 }
 
 .container {
-  max-width: 100%;
-  padding-left: 0px;
-  padding-right: 0px;
+  max-width: 100% !important;
+  width: 100%;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
 
 .bg-primary {
