--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import './combine.scss';
 @import './accordion.scss';
 @import './combine-bs.scss';
+@import './acco-boot.scss';
 
 $transparent: transparent;
 
@@ -136,4 +137,15 @@ $transparent: transparent;
   }
 }
 
+//carousal
+.carousel-inner img {
+width: 100%;
+height: 550px;
+}
+
+//modal
+.mymodel {
+  padding-left: 20px;
+  padding-bottom: 50px;
+}
 
